# Team555

./: CMakeLists.txt  Camera.cpp  Camera.h  Config.cpp  Config.h  Control.cpp  Control.h  Corners.cpp  Corners.h  Idle.cpp  Idle.h  ImageProcess.cpp  ImageProcess.h  Mallet.cpp  Mallet.h  Manual.txt  Motion.cpp  MotorDriver.cpp  MotorDriver.h  MotorDrivers.cpp  MotorDrivers.h  PlayTime.cpp  PlayTime.h  Puck.cpp  Puck.h  Serial.cpp  Serial.h  SerialClass.h  Settings.h  Supervisor.cpp  Supervisor.h  Table.cpp  Table.h  TableCalibrate.cpp  TableCalibrate.h  Thing.cpp  ThresholdImage.cpp  ThresholdImage.h  ViewFinder.cpp  config.txt  (+7 more)
arduino/Script/: mc_eeprom.conf  udev.rules
arduino/src/MotorControl/: motorControl.ino
inc/: Camera.h  Config.h  Control.h  Corners.h  DoubleBuffer.h  GameState.h  ImageProcess.h  Mallet.h  Motion.h  MotorDriver.h  PlayTime.h  Puck.h  Serial.h  Serial_Linux.h  Settings.h  Supervisor.h  Table.h  Thing.h  ViewFinder.h  helpers.h  states.h
inc/GamePieces/: History.h  Mallet.h  Puck.h  Thing.h
inc/motion/: Attack.h  Calibration.h  Defense.h  Impulse.h  Motion.h  Offense.h  ResetPuck.h  Strategy.h  Trajectory.h
lib/: PracticalSocket.cpp  PracticalSocket.h
motorControl/src/MotorControl/: motorControl.ino
motors/: MotorComm.cpp  MotorComm.h
python/IronPython-2.7.7/: csface.py
src/: Camera.cpp  Config.cpp  Corners.cpp  DoubleBuffer.cpp  GameState.cpp  GameState.h  Idle.cpp  ImageProcess.cpp  Mallet.cpp  MotorDriver.cpp  MovingAverage.cpp  MovingAverage.h  PlayTime.cpp  Puck.cpp  Serial.cpp  Settings.cpp  Supervisor.cpp  Table.cpp  Thing.cpp  ViewFinder.cpp  helpers.cpp  main.cpp
src/GamePieces/: History.cpp  Mallet.cpp  Puck.cpp  Thing.cpp
src/motion/: Attack.cpp  Calibration.cpp  Defense.cpp  Impulse.cpp  Motion.cpp  Offense.cpp  ResetPuck.cpp  Trajectory.cpp
